Spacing fixes

--- a/src/pages/stories/stories.scss
+++ b/src/pages/stories/stories.scss
@@ -5,7 +5,11 @@
 .stories__header {
   @include pale-blue-bg;
   @include bottom-padding;
-  padding-top: 200px;
+  padding-top: 150px;
+
+  @media (min-width: $md) {
+    padding-top: 200px;
+  }
 }
 
 .stories__pattern {
