--- a/src/pages/team/team.scss
+++ b/src/pages/team/team.scss
@@ -5,7 +5,11 @@
 .team__header {
   @include yellow-green-bg;
   @include bottom-padding;
-  padding-top: 200px;
+  padding-top: 150px;
+
+  @media (min-width: $md) {
+    padding-top: 200px;
+  }
 }
 
 .team-header__title {
